--- a/learn-ios/Base.lproj/Main.storyboard
+++ b/learn-ios/Base.lproj/Main.storyboard
@@ -28,6 +28,7 @@
                                 <state key="normal" title="Click Me"/>
                                 <connections>
                                     <action selector="btnClilckedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZA3-PM-5tb"/>
+                                    <segue destination="61c-bJ-oth" kind="presentation" id="MSc-7P-BIC"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -41,6 +42,30 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="24.800000000000001" y="31.934032983508249"/>
+        </scene>
+        <!--My View Controller-->
+        <scene sceneID="23F-rw-Gh3">
+            <objects>
+                <viewController id="61c-bJ-oth" customClass="MyViewController" customModule="learn_ios" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cqE-yN-4ib">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="MyViewController" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="df0-Kk-Sex">
+                                <rect key="frame" x="122" y="97" width="136" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="m05-FP-fQw"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QY1-Lx-Ksu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="945" y="32"/>
         </scene>
     </scenes>
 </document>
